FIX : perodicity overflow text issue resolved

--- a/client/src/components/dropdown/Dropdown.scss
+++ b/client/src/components/dropdown/Dropdown.scss
@@ -20,24 +20,31 @@
 
   .dropdown-title {
     font-size: 1.2rem;
-    display: flex;
-    justify-content: space-between;
-    padding: 0.4rem 0.7rem;
+    padding: 0.2rem 0.7rem;
     text-transform: capitalize;
-    align-items: center;
     color: rgb(82, 80, 80);
 
-    .icon {
-      font-size: 1.4rem;
-      margin: 0rem 0rem 0rem 0.3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .selected-option {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    div {
+      .icon {
+        font-size: 1.4rem;
+        padding: 0.5rem 0rem 0rem 0rem;
+      }
     }
   }
 
   .dropdown-options {
     position: absolute;
     width: 100%;
-    // top: 2.6rem;
-    // bottom: 2.6rem;
     left: 0;
     background-color: #ffffff;
     overflow: hidden;
